...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_toggle_active"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/tvCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/title_Reseller"
                android:padding="15dp"
                android:textColor="@color/white"
...


            </LinearLayout>

            <!--    select customer/ company-->
            <LinearLayout
                android:id="@+id/llSelectCustomer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/ic_rect_corner"
                android:layout_marginTop="-1dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
...
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:background="@drawable/ic_rect_corner">

            <LinearLayout
                android:id="@+id/llFullSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_rlc_toggle_active"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_Regular"
                        android:layout_marginLeft="5dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
...
                                android:layout_height="55dp"
                                android:layout_marginLeft="15dp"
                                android:src="@drawable/ic_prima"
                                android:layout_gravity="left|center"/>

                            <EditText
                                android:id="@+id/etGas1R"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:text="0"
                                android:textCursorDrawable="@null"
                                android:inputType="number"
...
                                android:layout_height="55dp"
                                android:layout_marginLeft="15dp"
                                android:src="@drawable/ic_other"
                                android:layout_gravity="left|center"/>

                            <EditText
                                android:id="@+id/etGas4R"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:text="0"
                                android:textCursorDrawable="@null"
                                android:inputType="number"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <!--            send-->
            <LinearLayout
                android:id="@+id/llStockSend"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@drawable/send_recieve_bg"
                android:backgroundTint="#5FB2F6">
...
                android:textColor="@color/white"
                android:fontFamily="@font/sofia_pro_regular_az"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/ettotalamount"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_Ratenoofcylinder"
                android:inputType="number"
                android:textColor="@color/white"
...
                android:textColor="@color/white"
                android:fontFamily="@font/sofia_pro_regular_az"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/etremarks"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write Something Here.."
                android:textColor="@color/white"
                android:fontFamily="@font/sofia_pro_regular_az"
...
                android:textColorHint="#99FFFFFF"/>

        </LinearLayout>

        <!--        Go-->
        <LinearLayout
            android:id="@+id/llGo"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_toggle_active"
            android:backgroundTint="#940000"
            android:paddingLeft="20dp"
...
