...
    android:background="#fff"
    android:scaleType="fitXY"
    android:layout_gravity="center_horizontal"
    tools:context=".ReceiptActivity">

    <LinearLayout
        android:id="@+id/llpdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_watermark_background">

        <LinearLayout
            android:layout_width="match_parent"
...
